# axiom-os-kernel

./: BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  QUICKSTART.md  README.md  aarch64-axiom.json  build.rs  run_arm.sh
.cargo/: config.toml
.github/workflows/: arm-benchmark.yml
src/: benchmark.rs  fat32.rs  lib.rs  main.rs  print.rs  provenance.rs  shell.rs  vfs.rs
src/arch/: mod.rs
src/arch/aarch64/: boot.rs  linker.ld  main.rs  mod.rs  uart.rs
src/mitra/: interpreter.rs
