[package]
name = "axiom_os"
version = "0.2.0-alpha"
authors = ["Abhimanyu Prasad <8292aniarc@gmail.com>"]
edition = "2024"
description = "Axiom OS - bare-metal kernel with BLAKE3 provenance enforcement on every read"
license = "MIT"
repository = "https://github.com/abhiprd2000/axiom-os-kernel"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[[bin]]
name = "axiom_os"
path = "src/main.rs"
test = true
bench = false

[[bin]]
name = "axiom_os_arm"
path = "src/arch/aarch64/main.rs"
test = false
bench = false

[dependencies]
blake3 = { version = "1.8.3", default-features = false, features = ["pure"] }
spin = "0.5.2"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2"
default-features = false

[target.'cfg(target_arch = "x86_64")'.dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
volatile = "0.2.6"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33

[build-dependencies]
ar = "0.9"
